# course_work_5

./: .gitignore  README.md  pyproject.toml
db_manager/: db_manager.py
src/: main.py  utils.py
