[tool.poetry]
name = "course-work-5"
version = "0.1.0"
description = ""
authors = ["valya_plotnikova <valya_ezhova@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
requests = "^2.32.3"
prettytable = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
